apply plugin: 'java'

group = 'com.github.kbinani'
version = "${System.env.HOLO_SPORTS_FESTIVAL_2022_PLUGIN_VERSION ?: "1.0.0"}"

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

repositories {
    mavenCentral()
    maven {
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
    compileOnly 'org.jetbrains:annotations:23.0.0'
}

processResources {
    filesMatching('plugin.yml') {
        expand(
            version: project.version
        )
    }
}

wrapper {
    gradleVersion = '7.5.1'
}
